--- a/index.html
+++ b/index.html
@@ -38,7 +38,8 @@
     "react/": "https://esm.sh/react@^19.2.3/",
     "recharts": "https://esm.sh/recharts@^3.6.0",
     "vite": "https://esm.sh/vite@^7.3.1",
-    "@vitejs/plugin-react": "https://esm.sh/@vitejs/plugin-react@^5.1.2"
+    "@vitejs/plugin-react": "https://esm.sh/@vitejs/plugin-react@^5.1.2",
+    "qrcode.react": "https://esm.sh/qrcode.react@^4.2.0"
   }
 }
 </script>
