--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html lang="en">
   <head>
@@ -30,6 +29,15 @@
         },
       }
     </script>
+    <style>
+      @keyframes cube-rotate {
+        0% { transform: rotateX(-30deg) rotateY(0deg); }
+        100% { transform: rotateX(-30deg) rotateY(360deg); }
+      }
+      .perspective-1000 { perspective: 1000px; }
+      .transform-style-3d { transform-style: preserve-3d; }
+      .animate-cube-rotate { animation: cube-rotate 4s linear infinite; }
+    </style>
 <script type="importmap">
 {
   "imports": {
