refactor: Update loading animation and styling
Replaces the rotating cube animation with a fade-in-up effect for a more modern loading state. Updates CSS and SVG components for the new animation.

--- a/index.html
+++ b/index.html
@@ -30,13 +30,20 @@
       }
     </script>
     <style>
-      @keyframes cube-rotate {
-        0% { transform: rotateX(-30deg) rotateY(0deg); }
-        100% { transform: rotateX(-30deg) rotateY(360deg); }
+      /* Isometric Cube Container */
+      .cube-wrapper {
+        display: inline-block;
+        transform-origin: 50% 50%;
       }
-      .perspective-1000 { perspective: 1000px; }
-      .transform-style-3d { transform-style: preserve-3d; }
-      .animate-cube-rotate { animation: cube-rotate 4s linear infinite; }
+      
+      @keyframes fade-in-up {
+        from { opacity: 0; transform: translateY(10px); }
+        to { opacity: 1; transform: translateY(0); }
+      }
+      
+      .animate-fade-in-up {
+        animation: fade-in-up 0.5s ease-out forwards;
+      }
     </style>
 <script type="importmap">
 {
